<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, NetSDLActivity!</string>
    <string name="app_name">POS初期化</string>
    <string name="init_name">NetSDL AMI Smart POS---初期化</string>
    <string name="menu_settings">Settings</string>
    <string name="blank"></string>
    <string name="operaterID">用户编号输入</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="n0">０</string>
    <string name="n1">１</string>
    <string name="n2">２</string>
    <string name="n3">３</string>
    <string name="n4">４</string>
    <string name="n5">５</string>
    <string name="n6">６</string>
    <string name="n7">７</string>
    <string name="n8">８</string>
    <string name="n9">９</string>
    <string name="back">←</string>
    <string name="clear">Ｃ</string>
    <string name="returnn">┘</string>
    <string name="Change">找零</string>
    <string name="Total">Total</string>
    <string name="Price">单价</string>
    <string name="Quantity">数量</string>
    <string name="lumpSum">合计</string>
    <string name="Payment">Payment</string>
    <string name="CheckOut">Check Out</string>
    <string name="Pay">小计</string>
    <string name="Return">返回</string>
    <string name="Close">结单</string>
    <string name="GotoSystem">进入系统</string>
    <string name="CheckDB">数据检查</string>
    <string name="CommodityData">商品数据</string>
    <string name="StoreData">店铺数据</string>
    <string name="PaymentData">支付方法</string>
    <string name="distinguish">区分</string>
    <string name="LocalVersion">本地版本</string>
    <string name="HostVersion">远程版本</string>
    <string name="CanUpdate">可更新</string>
    <string name="NeedUpdate">需更新</string>
    <string name="ForceUpdate">强制更新</string>
    <string name="Cancel">取消</string>
    <string name="Loading">加载中</string>
    <string name="msg_no_id">没有此编号的用户</string>
    <string name="msg_id_must_be_number">编号必须是数字</string>
    <string name="msg_password_wrong">密码错误。重新输入密码或者点【退格】重新输入用户编码</string>
    <string name="msg_no_sku">无此商品</string>
    <string name="s_view_btn">s_view_btn</string>
    <string name="Confirm">确认</string>
    <string name="type1">顾客贩卖</string>
    <string name="type2">顾客反品</string>
    <string name="type3">移动搬出</string>
    <string name="type4">移动搬入</string>
    <string name="item_change">项目修改</string>
    <string name="function1">门店录入业务</string>
    <string name="function2">门店查询业务</string>
    <string name="DeleteData">删除POS数据</string>
    <string name="UploadData">日结</string>
    <string name="DeviceData">设备数据</string>
    <string name="ViewConfig">查看配置</string>
    <string name="saleDate">营业日期设置</string>
    <string name="configUrlNoFind">POS服务地址没有配置</string>
    <string name="updateError">无更新消息</string>
    <string name="endDayMessage1">日结成功，无上传数据</string>
    <string name="endDayMessage2">日结成功</string>
    <string name="custData">客户数据</string>
    <string name="sale">销售</string>
    <string name="init">初始化</string>

</resources>